--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Cart</title>
+  <link rel="icon" href="./public/myCart-favicon.svg" />
+  <title>My Cart - react app</title>
 </head>
 
 <body>
